--- a/Helloworld.html
+++ b/Helloworld.html
@@ -36,6 +36,17 @@
             <li>Trick Mirror</li>
         </ul>
         </section>
+        <hr>
+        <section>   
+            <h2>Favorite websites</h2>
+            <p>I browse a lot, these are some of my favorites:</p> 
+        <ul>
+            <li><a href="https://www.ordina.nl/">Ordina</a></li>
+            <li><a href="https://www.vox.com/">Vox</a></li>
+            <li><a href="https://www.nfl.com/">NFL</a></li>
+            <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+        </ul>
+        </section>
         </article>
         <br>
         <p>This is a first attempt at creating a webpage, 
