--- a/Helloworld.html
+++ b/Helloworld.html
@@ -41,10 +41,10 @@
             <h2>Favorite websites</h2>
             <p>I browse a lot, these are some of my favorites:</p> 
         <ul>
-            <li><a href="https://www.ordina.nl/">Ordina</a></li>
-            <li><a href="https://www.vox.com/">Vox</a></li>
-            <li><a href="https://www.nfl.com/">NFL</a></li>
-            <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+            <li><a href="https://www.ordina.nl/" target="blank">Ordina</a></li>
+            <li><a href="https://www.vox.com/" target="blank">Vox</a></li>
+            <li><a href="https://www.nfl.com/" target="blank">NFL</a></li>
+            <li><a href="https://www.linkedin.com/" target="blank">LinkedIn</a></li>
         </ul>
         </section>
         </article>
