--- a/Helloworld.html
+++ b/Helloworld.html
@@ -46,6 +46,9 @@
             <li><a href="https://www.nfl.com/" target="blank">NFL</a></li>
             <li><a href="https://www.linkedin.com/" target="blank">LinkedIn</a></li>
         </ul>
+        <br>
+        <h3>The Goat</h3>
+        <img src="The Goat.jpg" alt="This is an image of The Goat">
         </section>
         </article>
         <br>
