--- a/Helloworld.html
+++ b/Helloworld.html
@@ -9,10 +9,17 @@
     <header>
         <h1>This is Floris's about me page</h1>
         <h3>Happy to see you!</h3>
+        <nav>
+            <a href="#hobbies">Hobbies</a>
+            <a href="#books">Favorite books</a>
+            <a href="#websites">Favorite websites</a>
+        </nav>
+        <br>
+        <button type="button">Click me!</button>
     </header>
     <article>
         <section>
-            <h2>Hobbies</h2>
+            <h2 id="hobbies">Hobbies</h2>
             <p>First I will tell you something about the things I like.
                 These are my hobbies:
             </p>
@@ -27,7 +34,7 @@
         </section>
         <hr>
         <section>   
-            <h2>Favorite books</h2>
+            <h2 id="books">Favorite books</h2>
             <p>I am kind of a big book nerd, so here are some of my favorite books:</p> 
         <ul>
             <li>Cat's Cradle</li>
@@ -38,7 +45,7 @@
         </section>
         <hr>
         <section>   
-            <h2>Favorite websites</h2>
+            <h2 id="websites">Favorite websites</h2>
             <p>I browse a lot, these are some of my favorites:</p> 
         <ul>
             <li><a href="https://www.ordina.nl/" target="blank">Ordina</a></li>
@@ -48,13 +55,29 @@
         </ul>
         <br>
         <h3>The Goat</h3>
-        <img src="The Goat.jpg" alt="This is an image of The Goat">
-        </section>
-        </article>
+        <img src="Images/The Goat.jpg" alt="This is an image of The Goat">
+        <br><br>
+        <p>What is your favorite NFL Team?
         <br>
+        <select>
+            <option value="yellow">Packers</option>
+            <option value="white">Patriots</option>
+            <option value="blue">Cowboys</option>
+            <option value="orange">Bengals</option>
+        </p>          
+        </section>
+    <br><br><br><br><br><br>
+          </article>
+        <br>
+        <section></section>
         <p>This is a first attempt at creating a webpage, 
             check with Floris Verkerk for further info.
+            <br><br>
+            Submit to news letter?
+            <br>
+            <input type="email" placeholder="Enter your email address">
         </p>
+    </section>
         <hr>
         <footer>&copy; Copyright 2020 Floris Verkerk</footer>
     </body>
