--- a/Helloworld.html
+++ b/Helloworld.html
@@ -31,6 +31,8 @@
             <li>Movies</li>
             <li>Tv shows</li>
         </ul>
+        <p>Want to see more about my hobbies? 
+            Check out the <a href="Hobbies.html" target="=blank">hobbies</a> page.</p>
         </section>
         <hr>
         <section>   
@@ -42,6 +44,8 @@
             <li>Bad Blood</li>
             <li>Trick Mirror</li>
         </ul>
+        <p>Want to see more about books? 
+            Check out the <a href="Books.html" target="=blank">books</a> page.</p>
         </section>
         <hr>
         <section>   
@@ -53,9 +57,13 @@
             <li><a href="https://www.nfl.com/" target="blank">NFL</a></li>
             <li><a href="https://www.linkedin.com/" target="blank">LinkedIn</a></li>
         </ul>
+        <p>Want to see more about websites? 
+            Check out the <a href="Websites.html" target="=blank">websites</a> page.</p>
         <br>
         <h3>The Goat</h3>
+        <a href="http://www.nfl.com/player/aaronrodgers/2506363/profile">
         <img src="Images/The Goat.jpg" alt="This is an image of The Goat">
+        </a>
         <br><br>
         <p>What is your favorite NFL Team?
         <br>
@@ -64,11 +72,14 @@
             <option value="white">Patriots</option>
             <option value="blue">Cowboys</option>
             <option value="orange">Bengals</option>
-        </p>          
+            </select>
+        </p>
+        <p>
+            Want to see more about American Football? 
+            Check out the <a href="American Football.html" target="=blank">American Football</a> page.
+        </p>         
         </section>
-    <br><br><br><br><br><br>
           </article>
-        <br>
         <section></section>
         <p>This is a first attempt at creating a webpage, 
             check with Floris Verkerk for further info.
