--- a/Helloworld.html
+++ b/Helloworld.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <title>About me</title>
+        <link rel="stylesheet" href="Styles.css">
     </head>
-
     <body>
     <header>
         <h1>This is Floris's about me page</h1>
