--- a/American Football.html
+++ b/American Football.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>American Football</title>
+        <link rel="stylesheet" href="Styles.css">
     </head>
     <body>
         <header>
