--- a/Books.html
+++ b/Books.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Books</title>
+        <link rel="stylesheet" href="Styles.css">
     </head>
     <body>
         <header>
