--- a/Websites.html
+++ b/Websites.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Websites</title>
+        <link rel="stylesheet" href="Styles.css">
     </head>
     <body>
         <header>
