--- a/Home.html
+++ b/Home.html
@@ -17,7 +17,7 @@
         <button type="button">Click me!</button>
     </header>
     <article>
-        <section class="content section">
+        <section class="ContentSection">
             <h2 id="hobbies">Hobbies</h2>
             <p>First I will tell you something about the things I like.
                 These are my hobbies:
@@ -34,7 +34,7 @@
             Check out the <a href="Hobbies.html" target="=blank">hobbies</a> page.</p>
         </section>
         <hr>
-        <section class="content section">
+        <section class="ContentSection">
             <h2 id="books">Favorite books</h2>
             <p>I am kind of a big book nerd, so here are some of my favorite books:</p> 
         <ul>
@@ -47,7 +47,7 @@
             Check out the <a href="Books.html" target="=blank">books</a> page.</p>
         </section>
         <hr>
-        <section class="content section">   
+        <section class="ContentSection">   
             <h2 id="websites">Favorite websites</h2>
             <p>I browse a lot, these are some of my favorites:</p> 
         <ul>
@@ -60,7 +60,7 @@
             Check out the <a href="Websites.html" target="=blank">websites</a> page.</p>
         </section>
         <hr>
-        <section class="content section">
+        <section class="ContentSection">
         <h3>The Goat</h3>
         <a href="http://www.nfl.com/player/aaronrodgers/2506363/profile">
         <img src="Images/The Goat.jpg" alt="This is an image of The Goat">
@@ -82,7 +82,7 @@
         </section>
           </article>
           <hr>
-        <section class="content section">
+        <section class="ContentSection">
         <p>This is a first attempt at creating a webpage, 
             check with Floris Verkerk for further info.
             <br><br>
@@ -90,7 +90,7 @@
             <br>
             <input type="email" placeholder="Enter your email address">
         </p>
-    </section>
+        </section>
         <hr>
         <footer>&copy; Copyright 2020 Floris Verkerk</footer>
     </body>
