--- a/Home.html
+++ b/Home.html
@@ -93,5 +93,11 @@
         </section>
         <hr>
         <footer>&copy; Copyright 2020 Floris Verkerk</footer>
+        <script> 
+        var msg = "Hello, world!";
+        window.alert(msg);
+        console.log("Hello, console!");
+        document.write("Hello, document!");
+        </script>
     </body>
 </html>
