--- a/Home.html
+++ b/Home.html
@@ -93,11 +93,6 @@
         </section>
         <hr>
         <footer>&copy; Copyright 2020 Floris Verkerk</footer>
-        <script> 
-        var msg = "Hello, world!";
-        window.alert(msg);
-        console.log("Hello, console!");
-        document.write("Hello, document!");
-        </script>
+        <script src="Script.js"></script>
     </body>
 </html>
