--- a/Home.html
+++ b/Home.html
@@ -12,6 +12,7 @@
             <a href="#hobbies">Hobbies</a>
             <a href="#books">Favorite books</a>
             <a href="#websites">Favorite websites</a>
+            <a href="Numbers.html" target="blank">Numbers</a>
         </nav>
         <br>
         <button type="button">Click me!</button>
