--- a/Hobbies.html
+++ b/Hobbies.html
@@ -8,6 +8,10 @@
         <header>
             This page is about hobbies.
         </header>
-
+        <br>
+        <button id="prev">-</button>
+        <img id="image" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1259621/city.jpg">
+        <button id="next">+</button>
+        <script src="Slideshow.js"></script>
     </body>
 </html>
