--- a/Books.html
+++ b/Books.html
@@ -17,6 +17,7 @@
             <input id="number" name="number" type="text">Enter a number between 40-90</input>
             <input type="submit"></input>    
         </form>
+        <script src="jquery-3.5.0.js"></script>
         <script src="FormValidation.js"></script>
     </body>
 </html>
