--- a/Guess.html
+++ b/Guess.html
@@ -9,6 +9,7 @@
             This is a page where you can play a number guessing game.
         </header>
         <hr>
-         <script src="Game.js"></script>
+        <script src="jquery-3.5.0.js"></script>
+        <script src="Game.js"></script>
     </body>
 </html>
