--- a/Home.html
+++ b/Home.html
@@ -94,6 +94,7 @@
         </section>
         <hr>
         <footer>&copy; Copyright 2020 Floris Verkerk</footer>
+        <script src="jquery-3.5.0.js"></script>
         <script src="Script.js"></script>
     </body>
 </html>
