--- a/Numbers.html
+++ b/Numbers.html
@@ -17,7 +17,8 @@
         <p id="multiplication"></p>
         <p id="division"></p>
         <p id="modulus"></p>
-
+        
+        <script src="jquery-3.5.0.js"></script>
         <script src="Lab.js"></script>
     </body>
 </html>
