--- a/To Do List.html
+++ b/To Do List.html
@@ -12,6 +12,8 @@
     <p id="error"></p>
 </div>
 <ul id="taskList"></ul>
+
+<script src="jquery-3.5.0.js"></script>
 <script src="List.js"></script>
 </body>
 </html>
