--- a/Hobbies.html
+++ b/Hobbies.html
@@ -12,6 +12,7 @@
         <button id="prev">-</button>
         <img id="image" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1259621/city.jpg">
         <button id="next">+</button>
+        <script src="jquery-3.5.0.js"></script>
         <script src="Slideshow.js"></script>
     </body>
 </html>
